[package]
name = "lol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {version = "1.0.0", features = ["ws", "rustls"]}
reqwest = {version = "0.11.14", features = ["json"] }
dotenv = "0.15.0"
actix-web = "4.3.0"
graphql_client = "0.12.0"
serde = "1.0.152"
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono"] }
uuid = {version="1.3.0", features=["serde", "v4"]}
chrono = "0.4.23"
